k8s/api/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailbook-api-cluster-ip-svr
spec:
  selector:
    app: mailbook-api
  ports:
  - port: 18986
    targetPort: 18986
